--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="menu">
                             <i class="bi bi-list icon-menu "></i>
                         </div>
-                        <a href=""><img src="/images/eschool.png" class="py-1 "></a>
+                        <a href=""><img src="/eschool.png" class="py-1 "></a>
                     </div>
                         <ul>   
                             <div class="mx-3">
@@ -80,7 +80,7 @@
                             <div class="d-flex">
                                
                                 <div class="icon ">
-                                    <img src="/images/a.png" alt="" class="bg-primary my-3 mx-2 img1">
+                                    <img src="/a.png" alt="" class="bg-primary my-3 mx-2 img1">
                                 </div>
                                 <div class="text1 ms-3 py-2  ">
                                     <h3 class="fw-bold fs-5">Marketing Digital</h3>
@@ -101,7 +101,7 @@
                         <div class=" ">
                             <div class="d-flex">
                                 <div class="icon ">
-                                    <img src="/images/d-removebg-preview.png" alt="" class="bg-success my-3 mx-2 img1">
+                                    <img src="d-removebg-preview.png" alt="" class="bg-success my-3 mx-2 img1">
                                 </div>
                                 <div class="text1 ms-3 py-2  ">
                                     <h3 class="fw-bold fs-5">UX/UI Design</h3>
@@ -122,7 +122,7 @@
                         <div class=" ">
                             <div class="d-flex">
                                 <div class="icon ">
-                                    <img src="/images/b.png" alt="" class=" bg-beige-fonce my-3 mx-2 img1">
+                                    <img src="/b.png" alt="" class=" bg-beige-fonce my-3 mx-2 img1">
                                 </div>
                                 <div class="text1 ms-3 py-2  ">
                                     <h3 class="fw-bold fs-5">Programmation</h3>
@@ -143,7 +143,7 @@
                         <div class=" ">
                             <div class="d-flex">
                                 <div class="icon ">
-                                    <img src="/images/c.png" alt="" class="bg-violet my-3 mx-2 img1">
+                                    <img src="/c.png" alt="" class="bg-violet my-3 mx-2 img1">
                                 </div>
                                 <div class="text1 ms-3 py-2  ">
                                     <h3 class="fw-bold fs-5">Entreprenariat</h3>
@@ -166,17 +166,17 @@
                     </div>
                         <div class="d-flex">
                             <div class="">
-                                <img src="/images/teach1.jpg" class="img-fluid img2 ">
+                                <img src="/teach1.jpg" class="img-fluid img2 ">
                                 
                             </div>
                             <div>
-                                <img src="/images/teach3.jpg" class="img-fluid img2 ">
+                                <img src="/teach3.jpg" class="img-fluid img2 ">
                             </div>
                             <div>
-                                <img src="/images/teach2.jpg" class="img-fluid img2 ">
+                                <img src="/teach2.jpg" class="img-fluid img2 ">
                             </div>
                             <div>
-                                <img src="/images/teach4.jpg" class="img-fluid img2 ">
+                                <img src="/teach4.jpg" class="img-fluid img2 ">
                             </div>
                             <!-- <div>
                                 <img src="/images/teach5.jpg" class="img-fluid img2 ">
@@ -200,7 +200,7 @@
                       </div>
                       <hr class="w-100">
                       <div class="d-flex">
-                        <a href=""><img src="/images/teach5.jpg" class="img3"></a>
+                        <a href=""><img src="/teach5.jpg" class="img3"></a>
                         <div class="h6">
                             <h6 class="mx-2 mt-2">Mouhammad</h6>
                             <i class="bi bi-star-fill mx-2 fs-6 text-warning"></i>
